Reworked the iterative solver in vancal_new_solve
Made several changes to the iterative solver:

  - Removed the hack that replaced unknown parameters with their
    reciprocal if they seemed to be drifting too far from the initial
    guess -- this wasn't stable.

  - Instead of stopping as soon as we find a solution worse than the
    previous, we now do a backtracking line search.

  - Improved the way we weight the equations.  The current method still
    doesn't match the method described in the Van hamme paper, but it's
    sort of close.  More work is needed to fix that.

  - Fixed bug in correlated parameters -- we weren't filling k_vector
    with the residuals as we should have.

  - Added detailed comments to the solver code.

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,7 @@ AC_CHECK_LIB([m], [sqrt])
 AC_CHECK_LIB([yaml], [yaml_document_initialize])
 
 # Checks for header files.
-AC_CHECK_HEADERS([search.h unistd.h])
+AC_CHECK_HEADERS([float.h search.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
