Fixed vnadata_alloc parameters in the vnadata manpage
Documentation fix and minor clean-ups only.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ plot: all
 pdfman:
 	(cd src && $(MAKE) $(AM_MAKEFLAGS) $@)
 
-clean-local:
-	rm -f archdep.o
+#clean-local:
+#	rm -f
 
-.PHONY: srcrpm rpm plot pdfroff
+.PHONY: srcrpm rpm plot pdfman
