Added Debian package support
On Debian systems, can now create local .deb files:
    ./configure
    make deb

Installing the resulting deb/*.deb packages installs the library in
the standard system directories.

Updated the README file.

Fixed a couple missing -lyaml options on vnaproperty tests and examples.

--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,7 @@ LT_INIT
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
     Makefile
+    deb/Makefile
     rpm/Makefile
     rpm/libvna.spec
     src/Makefile
