Fixed make distcheck
The install-exec-hook in src/Makefile.am used to remove libtool .la files
from the debian packages broke "make distcheck".  Backed out that target
and instead used debian/not-installed to make the debian build ignore
the unpackaged .la file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,6 +16,7 @@ dist_noinst_DATA = \
 	debian/libvna-dev.manpages \
 	debian/libvna.dirs \
 	debian/libvna.install \
+	debian/not-installed \
 	debian/postinst_run \
 	debian/postrm_run \
 	debian/rules \
