Moved examples directory to /usr/share/doc/libvna*/examples
For consistency, made the /usr/local and RPM installs put the example
programs into their own install directory.  The Debian package was
already putting them there.

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,14 +3,18 @@ libvna_ladir= $(libdir)
 
 SUBDIRS= src deb rpm
 
-dist_doc_DATA= COPYING README-EXAMPLES
-dist_noinst_SCRIPTS= bootstrap
+examplesdir = $(docdir)/examples
+
+dist_doc_DATA = COPYING
+dist_examples_DATA = README-EXAMPLES
+dist_noinst_SCRIPTS = bootstrap
 
 dist_noinst_DATA = \
 	debian/changelog \
 	debian/control \
 	debian/copyright \
 	debian/libvna-dev.dirs \
+	debian/libvna-dev.docs \
 	debian/libvna-dev.examples \
 	debian/libvna-dev.install \
 	debian/libvna-dev.manpages \
