Drop the OS install name from the RPM release field
Changed the release field to "1" instead of, e.g. "1.fc31" when building
on Fedora 31.  Libvna isn't very closely tied to the Linux distribution
in which it's built.

--- a/rpm/libvna.spec.in
+++ b/rpm/libvna.spec.in
@@ -1,6 +1,6 @@
 Name: @PACKAGE_TARNAME@
 Version: @PACKAGE_VERSION@
-Release: 1%{?dist}
+Release: 1
 Summary: Electrical Network Parameter Library
 Group: Applications/Engineering
 License: GPLv3+
