--- a/.gitignore
+++ b/.gitignore
@@ -13,61 +13,77 @@ Makefile.in
 /ar-lib
 /autom4te.cache/
 /compile
+/configd
 /config.guess
 /config.h
 /config.status
 /config.sub
-/configd
 /configure
+/deb/libvna-*
+/deb/libvna_*.orig.tar.gz
 /depcomp
 /install-sh
 /libtool
+/libvna*.tar.gz
 /ltmain.sh
 /m4/
 /missing
+/rpm/libvna-*/
+/rpm/libvna.spec
+/rpm/libvna-*.src.rpm
+/rpm/root/
+/rpm/x86_64/
+/src/convert-parameters
+/src/cscope.out
+/src/SOLT.vnacal
+/src/tests/test-suite.log
+/src/tests/test-vnacal-apply
+/src/tests/test-vnacal-compat-V2
+/src/tests/test-vnacal-random
+/src/tests/test-vnacal-save-load
+/src/tests/test-vnacal-Silvonen16
+/src/tests/test-vnacal-SOLT
+/src/tests/test-vnacal-TRL
+/src/tests/test-vnacal-Van-hamme
+/src/tests/test-vnacal.vnacal
+/src/tests/test-vnacommon-lu
+/src/tests/test-vnacommon-minverse
+/src/tests/test-vnacommon-mldivide
+/src/tests/test-vnacommon-mrdivide
+/src/tests/test-vnacommon-qr
+/src/tests/test-vnacommon-qrd
+/src/tests/test-vnacommon-qrsolve
+/src/tests/test-vnacommon-qrsolve2
+/src/tests/test-vnaconv-2x2
+/src/tests/test-vnaconv-3x3
+/src/tests/test-vnadata-basic
+/src/tests/test-vnadata.npd
+/src/tests/test-vnadata.s1p
+/src/tests/test-vnadata.s2p
+/src/tests/test-vnadata.s3p
+/src/tests/test-vnadata.s4p
+/src/tests/test-vnadata-save-load-convert
+/src/tests/test-vnadata.ts
+/src/tests/test-vnaproperty-expr
+/src/tests/test-vnaproperty-list
+/src/tests/test-vnaproperty-map
+/src/tests/test-vnaproperty-scalar
+/src/tests/vnacal-test.vnacal
+/src/TRL.vnacal
+/src/TSD.vnacal
+/src/vnacal_new.pdf
+/src/vnacal_parameter.pdf
+/src/vnacal.pdf
+/src/vnacal-SOLT-example
+/src/vnacal-SOLT-example.out
+/src/vnacal-TRL-example
+/src/vnacal-TSD-example
+/src/vnacal-TSD-example.out
+/src/vnaconv-example
+/src/vnaconv.pdf
+/src/vnadata-example
+/src/vnadata.pdf
+/src/vnaerr.pdf
+/src/vnaproperty-example
 /stamp-h1
 /test-driver
-rpm/libvna.spec
-src/convert-parameters
-src/cscope.out
-src/SOLT.vnacal
-src/tests/test-suite.log
-src/tests/test-vnacal-apply
-src/tests/test-vnacal-compat-V2
-src/tests/test-vnacal-random
-src/tests/test-vnacal-save-load
-src/tests/test-vnacal-Silvonen16
-src/tests/test-vnacal-SOLT
-src/tests/test-vnacal-TRL
-src/tests/test-vnacal.vnacal
-src/tests/test-vnacommon-lu
-src/tests/test-vnacommon-minverse
-src/tests/test-vnacommon-mldivide
-src/tests/test-vnacommon-mrdivide
-src/tests/test-vnacommon-qr
-src/tests/test-vnacommon-qrd
-src/tests/test-vnacommon-qrsolve
-src/tests/test-vnacommon-qrsolve2
-src/tests/test-vnaconv-2x2
-src/tests/test-vnaconv-3x3
-src/tests/test-vnadata-basic
-src/tests/test-vnaproperty-expr
-src/tests/test-vnaproperty-list
-src/tests/test-vnaproperty-map
-src/tests/test-vnaproperty-scalar
-src/tests/vnacal-test.vnacal
-src/TRL.vnacal
-src/TSD.vnacal
-src/vnacal_new.pdf
-src/vnacal_parameter.pdf
-src/vnacal.pdf
-src/vnacal-SOLT-example
-src/vnacal-SOLT-example.out
-src/vnacal-TRL-example
-src/vnacal-TSD-example
-src/vnacal-TSD-example.out
-src/vnaconv-example
-src/vnaconv.pdf
-src/vnadata-example
-src/vnadata.pdf
-src/vnaerr.pdf
