Add vnacal_new_set_p_tolerance: unknown parameter iteration tolerance
When iteratively solving for unknown parameters, we were using a
very small hard-coded tolerance level for stopping the iteration.
This commit makes the limit configurable and increases the default
tolerance to 1.0e-6.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,8 @@ libvna_la_SOURCES = archdep.h archdep.c vnacal_internal.h \
 	vnacal_make_correlated_parameter.c vnacal_make_scalar_parameter.c \
 	vnacal_make_unknown_parameter.c vnacal_make_vector_parameter.c \
 	vnacal_name_to_type.c vnacal_new_add_common.c vnacal_new.c \
-	vnacal_new_parameter.c vnacal_new_set_m_error.c vnacal_new_solve.c \
+	vnacal_new_parameter.c vnacal_new_set_m_error.c \
+	vnacal_new_set_p_tolerance.c vnacal_new_solve.c \
 	vnacal_parameter.c vnacal_property.c vnacal_rfi.c \
 	vnacal_save.c vnacal_set_dprecision.c vnacal_set_fprecision.c \
 	vnacal_type_to_name.c \
