Fix workflow branch+tag filter
When both "branch" and "tag" are given, they are logically or'ed
instead of anded.  Try conditional to work around.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
 name: Make Release
 on:
   push:
-    branches: [ master ]
     tags: [ "v[0-9]*" ]
 
 jobs:
   build:
+    if: endsWith(github.ref, 'master')
     runs-on: ubuntu-latest
     steps:
     - name: Install Dependencies
