Modify workflows: no test on master, add dependency for build
Change test.yml to not run tests redundantly when development changes
are moved to master.  Add the debhelper-compat build dependency to
release.yml.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install autoconf automake build-essential devscripts \
-             libtool libyaml-dev make
+        sudo apt-get install autoconf automake build-essential \
+             debhelper-compat devscripts libtool libyaml-dev make
     - name: Checkout Code
       uses: actions/checkout@v2
     - name: Build Debian Package
