--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ master, development ]
+    branches: [ development ]
   pull_request:
-    branches: [ master, development ]
+    branches: [ development ]
 
 jobs:
   build:
