Include README-BUILD.md and README-DEVELOPMENT.md in dist tarball
Distribute the build and development instructions with the source.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,8 @@ dist_examples_DATA = README-EXAMPLES
 dist_noinst_SCRIPTS = bootstrap
 
 dist_noinst_DATA = \
+	README-BUILD.md \
+	README-DEVELOPMENT.md \
 	debian/changelog \
 	debian/control \
 	debian/copyright \
