Add pkg-config file
Include $libdir/pkgconfig/libvna.pc file to simplify management of build
dependencies on libvna.

--- a/rpm/libvna.spec.in
+++ b/rpm/libvna.spec.in
@@ -48,8 +48,9 @@ make clean
 %files devel
 %{_docdir}/%{name}/*
 %{_includedir}/*
-%{_libdir}/*.so
 %{_libdir}/*.a
+%{_libdir}/pkgconfig/*.pc
+%{_libdir}/*.so
 %{_mandir}/*/*
 
 %changelog
